--- a/frontend/src/app/component/owner/owner.component.html
+++ b/frontend/src/app/component/owner/owner.component.html
@@ -14,12 +14,34 @@
         <th>First Name</th>
         <th>Last Name</th>
         <th>Email</th>
+        <th class="min-width">Actions</th>
+
       </thead>
       <tbody>
         <tr *ngFor="let owner of owners" class="center-td">
           <td>{{owner.firstName}}</td>
           <td>{{owner.lastName}}</td>
           <td>{{owner.email}}</td>
+          <td>
+
+          <div class="btn-group">
+            <a class="btn btn-sm responsive-info-button"
+               [routerLink]="['show', owner.id]"
+               aria-label="Show owner details">
+              <i class="bi bi-info-lg"></i>
+            </a>
+            <a class="btn btn-sm responsive-warning-button"
+               [routerLink]="['edit', owner.id]"
+               aria-label="Edit owner">
+              <i class="bi bi-pencil"></i>
+            </a>
+            <a class="btn btn-sm responsive-danger-button"
+            (click) ="onDelete(owner.id, owner)"
+            aria-label="Edit owner">
+           <i class="bi bi-trash"></i>
+         </a>
+          </div>
+          </td>
 
         </tr>
       </tbody>
