functionl generic confirm dialog + delete dialog for horse and owner component

--- a/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
+++ b/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
@@ -113,7 +113,9 @@
              textInputClass="form-control"
              valueNeedsToMatchSuggestion="true"
              [(ngModel)]="horse.mother"
-            
+             [suggestions]="motherSuggestions"
+             [formatModel]="formatHorseName"
+
              ></app-autocomplete>
         </div>
       </div>
@@ -131,7 +133,9 @@
           textInputClass="form-control"
           valueNeedsToMatchSuggestion="true"
           [(ngModel)]="horse.father"
-         
+          [suggestions]="fatherSuggestions"
+          [formatModel]="formatHorseName"
+
           ></app-autocomplete>
           <!-- [formatModel]="formatOwnerName"
           [suggestions]="ownerSuggestions" -->
