--- a/frontend/src/app/component/horse/horse.component.html
+++ b/frontend/src/app/component/horse/horse.component.html
@@ -98,7 +98,7 @@
             </a>
             <a
             class="btn btn-sm responsive-danger-button"
-            (click) ="delete(horse.id)"
+            (click) ="onDelete(horse.id, horse)"
             aria-label="Edit horse">
            <i class="bi bi-trash"></i>
             </a>
