--- a/frontend/src/app/component/confirm-delete-dialog/confirmation-delete-dialog.html
+++ b/frontend/src/app/component/confirm-delete-dialog/confirmation-delete-dialog.html
@@ -1,17 +1,9 @@
-<!-- <h2 mat-dialog-title>Install Angular</h2>
-<mat-dialog-content class="mat-typography">
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>
-</mat-dialog-actions> -->
-
-
-<h1 mat-dialog-title>Delete file</h1>
+<h1 mat-dialog-title>Confirm {{confirmAction}}</h1>
 <div mat-dialog-content>
-  Would you like to delete cat.jpeg?
+  <p>Do you wish to confirm the {{confirmAction}} of {{subjectName}}</p>
+
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button mat-dialog-close cdkFocusInitial>Ok</button>
+  <button mat-button (click)="onNoClick()">Abort</button>
+  <button mat-button (click)="onConfirmClick()">Ok</button>
 </div>
