--- a/frontend/src/app/component/horse/horse.component.html
+++ b/frontend/src/app/component/horse/horse.component.html
@@ -88,7 +88,9 @@
         <td>
           <div class="btn-group">
             <a class="btn btn-sm responsive-info-button"
+               (click) ="onDetail(horse.id, horse)"
                aria-label="Show horse details">
+               
               <i class="bi bi-info-lg"></i>
             </a>
             <a class="btn btn-sm responsive-warning-button"
